--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
-<!doctype html>
-<html lang="en-us">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>DOOM</title>
-    <style type="text/css">      .dosbox-container { width: 320px; height: 200px; }
-    .dosbox-container > .dosbox-overlay { background: url(https://js-dos.com/cdn/DOOM.png); }
-</style>
-</head>
-<body>
-    <div id="dosbox"></div>
-    <br/>
-    <button onclick="dosbox.requestFullScreen();">Make fullscreen</button>
-    
-    <script type="text/javascript" src="https://js-dos.com/cdn/js-dos-api.js"></script>
-    <script type="text/javascript">
-    var dosbox = new Dosbox({
-    id: "dosbox",
-        onload: function (dosbox) {
-        dosbox.run("upload/DOOM-@evilution.zip", "./doom");
-        },
-        onrun: function (dosbox, app) {
-        console.log("App '" + app + "' is runned");
+<iframe
+    width="640"
+    height="480"
+    frameborder="0"
+    src="https://dos.zone/player/?bundleUrl=https%3A%2F%2Fcdn.dos.zone%2Fcustom%2Fdos%2Fdoom.jsdos?anonymous=1"
+    allowfullscreen>
+</iframe>           
+<!--
+Message 'dz-player-exit' will be fired when js-dos is exited:
+
+    window.addEventListener("message", (e) => {
+        if (e.data.message === "dz-player-exit") {
+            // ...
         }
     });
-    </script>
-</body>
-</html>
+-
